[package]
name = "tablestg"
version = "0.4.30"
edition = "2024"
authors = ["George Barwood"]
description = "Storage for database tables"
license = "MIT OR Apache-2.0"
categories = ["database-implementations"]
include = ["/src"]

[dependencies]
atom-file = { version = "1.0.28", features = ["pstd"] }
fxhash = "0.2.1"

page-store = { version = "1.0.19", features = ["log"] }
postcard = { version = "1.1.3", features = ["use-std"] }
pstd = { version = "1.0.135", features = ["serde","log-alloc"] }
serde = { version = "1.0.228", features = ["serde_derive","rc"] }    

#pstd = "1.0.0"
#pstd = { path = "../pstd" }

[features]
#log-alloc = ["pstd/log-alloc"]

